--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -431,6 +431,17 @@
 #新大陸
  CHL_social_liberalism_party:0 "急進党"
  
+ CAN_total_socialism_party:0 "カナダ共産党"
+ CAN_radical_socialism_party:0 "労働進歩党"
+ CAN_social_democracy_party:0 "協同連邦党"
+ CAN_social_liberalism_party:0 "カナダ自由党"
+ CAN_classical_liberalism_party:0 "カナダ進歩保守党"
+ CAN_liberal_conservatism_party:0 "カナダ進歩保守党"
+ CAN_social_conservatism_party:0 "カナダ進歩保守党"
+ CAN_authoritative_democracy_party:0 "軍事政権"
+ CAN_reactionary_authoritarianism_party:0 "軍事政権"
+ CAN_national_populism_party:0 "社会信用党"
+ 
  USA_total_socialism_party:0 "アメリカ共産党"
  USA_radical_socialism_party:0 "進歩党"
  USA_social_democracy_party:0 "アメリカ社会党"
@@ -438,8 +449,8 @@
  USA_classical_liberalism_party:0 ""
  USA_liberal_conservatism_party:0 ""
  USA_social_conservatism_party:0 "共和党"
- USA_authoritative_democracy_party:0 ""
- USA_reactionary_authoritarianism_party:0 ""
+ USA_authoritative_democracy_party:0 "軍事政権"
+ USA_reactionary_authoritarianism_party:0 "軍事政権"
  USA_national_populism_party:0 "州権民主党"
  
  MEX_total_socialism_party:0 "メキシコ共産党"
