--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -81,7 +81,7 @@
  LOADING_TIP_79: "日本はこんなに勝っているのか\n- 小磯　國昭"
  LOADING_TIP_80: "たぶん、歴代の朝鮮総督のうち、ご覧のとおり私が一番の醜男だ。\n- 小磯　國昭"
  LOADING_TIP_81: "ベルギーは道ではない。国だ!\n- 軍人の王"
- LOADING_TIP_82: "\n- "
+ LOADING_TIP_82: "明石元二郎一人で、満州の日本軍20万人に匹敵する戦果を上げている。\n- ヴィルヘルム2世"
  LOADING_TIP_83: "\n- "
  LOADING_TIP_84: "\n- "
  LOADING_TIP_85: "\n- "
