--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -19,8 +19,8 @@
  KOR_classical_liberalism_party:0 "大韓独立促成国民会"
  KOR_liberal_conservatism_party:0 "朝鮮民主党"
  KOR_social_conservatism_party:0 "韓国独立党"
- KOR_authoritative_democracy_party:0 "開化派"
- KOR_reactionary_authoritarianism_party:0 "事大党"
+ KOR_authoritative_democracy_party:0 "朝鮮総督府"#開化派
+ KOR_reactionary_authoritarianism_party:0 "朝鮮総督府"#事大党
  KOR_national_populism_party:0 "朝鮮総督府"#国民総力朝鮮連盟
  
  DLI_total_socialism_party:0 "日本共産党関東支部"
@@ -81,6 +81,10 @@
  SIA_authoritative_democracy_party:0 "人民党"
  SIA_reactionary_authoritarianism_party:0 "人民党"
  SIA_national_populism_party:0 "仏法主義党"
+ 
+ INS_authoritative_democracy_party:0 "軍事政権"
+ INS_reactionary_authoritarianism_party:0 "軍事政権"
+ INS_national_populism_party:0 "ジャワ奉公会"
  
 #ウェストミンスター憲章機構
  ENG_total_socialism_party:0 "グレートブリテン共産党"
