--- a/localisation/geacps_politics_l_english.yml
+++ b/localisation/geacps_politics_l_english.yml
@@ -1,6 +1,9 @@
 ﻿l_english:
 #ATS
- POLITICS_SACRED_COMMUNITY_DESC:0 "アトス自治修道士共和国は、その上部団体であるプロトスとともに、執行委員会として4組織から成る「神聖な局」を有し、20の神聖な修道院の代表から構成される「神聖な共同体」によって統治される。行政当局は、ギリシャ外務省によって任命された民政長官によって代行される。そのおもな義務は機関と社会的秩序の機能の監督である。共和国は、霊的な面ではコンスタンディヌーポリ総主教庁の直接的な管轄のもとにある。"
+ POLITICS_SACRED_COMMUNITY_DESC:0 "アトス自治修道士共和国は、その上部団体であるプロトスとともに、執行委員会として4組織から成る「神聖な局」を有し、20の神聖な修道院の代表から構成される「神聖な共同体」によって統治される。\nアトス自治修道士共和国行政当局は、ギリシャ外務省によって任命された民政長官によって代行される。そのおもな義務は機関と社会的秩序の機能の監督である。共和国は、霊的な面ではコンスタンディヌーポリ総主教庁の直接的な管轄のもとにある。"
+ 
+#JAP
+ POLITICS_HIROHITO_DESC:0 "昭和天皇は、日本の第124代天皇。諱は裕仁、御称号は迪宮。お印は若竹。\n1921年11月25日から1926年12月25日までの5年余りに渡って、父帝・大正天皇の健康状態の悪化により、摂政宮となった。\n60年余りの在位中に第二次世界大戦を挟み、大日本帝国憲法下の「統治権の総攬者」としての天皇と日本国憲法下の「象徴天皇」の両方を経験した唯一の天皇である。"
  
 #KOR
- POLITICS_NOBUYUKI_ABE_DESC:0 "阿部信行は、日本の陸軍軍人、政治家。陸軍士官学校9期、陸軍大学校19期、陸軍大将。位階は正二位。勲等は勲一等。予備役編入後、内閣総理大臣、外務大臣、翼賛政治会総裁、貴族院議員、朝鮮総督などを歴任した。"
+ POLITICS_NOBUYUKI_ABE_DESC:0 "阿部信行は、日本の陸軍軍人、政治家。\n陸軍士官学校9期、陸軍大学校19期、陸軍大将。位階は正二位。勲等は勲一等。\n予備役編入後、内閣総理大臣、外務大臣、翼賛政治会総裁、貴族院議員、朝鮮総督などを歴任した。"
