--- a/localisation/geacps_politics_l_english.yml
+++ b/localisation/geacps_politics_l_english.yml
@@ -1,9 +1,15 @@
 ﻿l_english:
+#AFG
+ POLITICS_MOHAMMED_ZAHIR_SHAH_DESC:0 "1933年11月に起きた父の暗殺により王位を継承した。1939年9月に開戦した第二次世界大戦では、1941年10月にイギリスとソビエト連邦はドイツとイタリアなど枢軸国の外交官や民間人の国外追放を要求した。これに対しアフガニスタン政府は、枢軸国のみならず交戦中の全ての国の外交官以外の民間人に国外退去を命じた。\nこのように、ザーヒル・シャーの統治下で英領インドとソ連、中華民国に挟まれた中央アジアにおける緩衝国家として、日本や満州国などからなる大東亜共栄圏やドイツ、イタリアなどからなる枢軸国、イギリスやアメリカ合衆国、ソ連などからなる連合国、中華民国からなる抗日民族統一戦線の、どちらにもつかない中立国として1945年9月の終戦まで機能していた。"
+ 
 #ATS
  POLITICS_SACRED_COMMUNITY_DESC:0 "アトス自治修道士共和国は、その上部団体であるプロトスとともに、執行委員会として4組織から成る「神聖な局」を有し、20の神聖な修道院の代表から構成される「神聖な共同体」によって統治される。\nアトス自治修道士共和国行政当局は、ギリシャ外務省によって任命された民政長官によって代行される。そのおもな義務は機関と社会的秩序の機能の監督である。共和国は、霊的な面ではコンスタンディヌーポリ総主教庁の直接的な管轄のもとにある。"
  
 #JAP
- POLITICS_HIROHITO_DESC:0 "昭和天皇は、日本の第124代天皇。諱は裕仁、御称号は迪宮。お印は若竹。\n1921年11月25日から1926年12月25日までの5年余りに渡って、父帝・大正天皇の健康状態の悪化により、摂政宮となった。\n60年余りの在位中に第二次世界大戦を挟み、大日本帝国憲法下の「統治権の総攬者」としての天皇と日本国憲法下の「象徴天皇」の両方を経験した唯一の天皇である。"
+ POLITICS_HIROHITO_DESC:0 "昭和天皇は、日本の第124代天皇。諱は裕仁、御称号は迪宮。お印は若竹。\n1921年11月25日から1926年12月25日までの5年余りに渡って、父帝・大正天皇の健康状態の悪化により、摂政宮となった。\n在位中に大東亜戦争を挟み、大日本帝国憲法下の「統治権の総攬者」としての天皇を経験した天皇である。"
  
 #KOR
  POLITICS_NOBUYUKI_ABE_DESC:0 "阿部信行は、日本の陸軍軍人、政治家。\n陸軍士官学校9期、陸軍大学校19期、陸軍大将。位階は正二位。勲等は勲一等。\n予備役編入後、内閣総理大臣、外務大臣、翼賛政治会総裁、貴族院議員、朝鮮総督などを歴任した。"
+ 
+ #TIB
+ POLITICS_14TH_DALAI_LAMA_DESC:0 "1935年7月6日、当時の中華民国青海省内のチベット北部アムドに属するタクツェルの小さな農家にて、9番目の子供として生まれた。なお、生家は小農ではあったが、地主に従属する小作人というわけでもなかった。貴族階級でもない。わずかな土地を人に貸し、自分たちでも大麦、ソバ、トウモロコシなどを栽培しており、ゾモというヤクと牝牛の雑種を5〜6頭、80頭あまりの羊やヤギ、2〜3頭の馬、2頭のヤクを飼っていたという。生家はチベットならどこにでもあるなんの変哲もないありふれた民家だったという。\n幼名はラモ・ドンドゥプと名づけられた。これは「願いを叶えてくれる女神」という意味である。長男のトゥブテン・ジグメ・ノルブはすでに高僧タクツェル・リンポチェの化身として認められていて、有名な僧院クムブムで修行をしていた。他にも18歳年上の姉としてチェリン・ドルマなどがいた。見知らぬ人を少しも怖がらぬ子だったと、母親は後に語ったという。\n3歳になるかならないかという頃、ダライ・ラマの化身を見つけるためにチベットの政府が派遣した捜索隊が、さまざまなお告げに導かれてクムブム僧院にやってきた。お告げのひとつは、1933年に死去したダライ・ラマ13世の遺体が埋葬前の安置期間中に頭の向きを北東に変えたこと。他には、高僧が聖なる湖で湖面にAh、Ka、Maのチベット文字が浮かび上がるのを「視た」、続いて、青色と金色の屋根の3階建ての僧院とそこから一本の道が丘につづいている映像を「視た」、そして最後に変な形をした「樋」のある小さな家を「視た」ことだ、という。僧は"Ah"は地名アムドのアだと確信して捜索隊をそこへ派遣したという。\n"Ka"の文字はクムブムのKに違いないと思ってクムブムにやってきた捜索隊は、クムブムの僧院が青くて3階建てであることを発見しその読みが正しかったと確信したという。捜索隊は付近の村を探し回り、やがて屋根にこぶだらけの杜松が走っている民家を見つけた。\n捜索隊は身分を隠していたのにそこに含まれていたセラ僧院の僧を「セラ・ラマ」と呼んだという。また、ダライ・ラマ13世の遺品とそれそっくりの偽物をいくつかその子供に見せたところ、いずれも正しい遺品のほうを選び「それ、ボクのだ」と言ったという。上にあげたようないくつかの確認の手続を経てさらに他の捜索結果も含めて政府が厳密に審査した結果、この子は3歳の時に真正ダライ・ラマの化身第13世ダライ・ラマトゥプテン・ギャツォの転生と認定され、ジェツン・ジャンペル・ガワン・ロサン・イシ・テンジン・ギャツォ（聖主、穏やかな栄光、憐れみ深い、信仰の護持者、智慧の大海）と名付けられた。\n1939年の夏、ラサに向けてチベット政府の捜索隊らおよび両親や兄弟らとともに3ヶ月かけて移動。ダライ・ラマの夏の離宮であるノルブリンカ（宝石の庭園の意）に入った。1940年冬、ポタラ宮殿に移動し、チベットの精神的指導者の座に正式に就任、ラサのジョカン寺で剃髪式、見習い僧の式が行われ、ダライ・ラマとしての手ほどきを受け始めた。ロブサン・サムテン（1つ上の兄）とともに読み書きの勉強から開始。お経の授業も開始。さらに、精神的（宗教的な）指導者としての教育と同時に、世俗的（一般社会の）指導者としての教育も受け始めた。そういった時間以外はその年齢の子供らしく活発に遊んで過ごした。8歳の時には兄ロブサンは私立学校に行き、ダライ・ラマは一人で教育を受けるようになった。姉と一緒に過ごし、ロブサンや母が時々通ってくる、という生活を送る。毎年春先にノルブリンカに移り、半年後の冬の始まりとともにポタラ宮殿に戻る、という生活を20歳まで繰り返した。少年時代にラサには10人ほどのヨーロッパ人が住んでいて、その中の一人ハインリヒ・ハラーを兄ロブサンが連れてきたことで、互いに知り合うことになった。"
