--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 #シナリオ
  THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
- THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "我が国は大東亜戦争において連合国を撃破し、大東亜新秩序を築いた。\n太陽の沈まぬ国となった我が国だが、問題が山積しているのも確かである。\n政党政治への不信や軍部の台頭、終わらぬ支那事変、植民地での独立運動、失われた極東を取り戻すべく肥大化する赤き帝国、密かに報復を狙う自由の帝国...\n果たして我が国の未来は繁栄か没落か。"
+ THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "我が国は大東亜戦争において連合国を撃破し、大東亜新秩序を築いた。\n太陽の沈まぬ国となった我が国だが、問題が山積しているのも確かである。\n政党政治への不信や軍部の台頭、終わらぬ支那事変、植民地での独立運動、失われた極東を取り戻すべく肥大化する赤き帝国、密かに報復を狙う自由の帝国...\n\n\n果たして我が国の未来は繁栄か没落か。"
  
  THE_CHAOS_OF_EUROPE_NAME:0 "混沌の欧州"
  THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦では肥大化したドイツとイタリア、及びそれらの同盟国の崩壊に成功した。しかし、戦勝国の独自路線が仇となり、戦後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。以前の支配者は、大きく三つに分断され、その最大の同盟国は、南部が支配から脱した。\nバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では、イギリスとフランスの海峡を超えた対立が激化しようとしていたのだった..."
