--- a/localisation/geacps_politics_l_english.yml
+++ b/localisation/geacps_politics_l_english.yml
@@ -24,7 +24,7 @@
  POLITICS_GUSTAF_V_DESC:0 "グスタフ5世は、スウェーデン・ベルナドッテ王朝の第5代国王。前国王オスカル2世の子。母はナッサウ公ヴィルヘルムの娘ソフィア。"
  
 #POL
- POLITICS_BOLESŁAW_BIERUT_DESC:0 "1892年4月18日、ルブリン近郊の街ルリに生まれる。\n1912年にポーランド社会党に入党し、同党左派に属した。1918年にポーランド・リトアニア王国社会民主党との合同によりポーランド共産党が結党されると引き続き所属する。ポーランド共産党にもヨシフ・スターリンの大粛清の嵐が吹き荒れたが、ビェルトは粛清を免れ、1942年のポーランド労働者党の創立に参加する。\nその後ソビエト連邦によりポーランドが「解放」されるとビェルトは人民評議会議長に就任し、ポーランド労働者党は社会党を併合しポーランド統一労働者党となる。ビェルトは初代書記長に就任し、「小スターリン」としてスターリン主義的な恐怖政治をポーランドに敷いた。"
+ POLITICS_BOLESLAW_BIERUT_DESC:0 "1892年4月18日、ルブリン近郊の街ルリに生まれる。\n1912年にポーランド社会党に入党し、同党左派に属した。1918年にポーランド・リトアニア王国社会民主党との合同によりポーランド共産党が結党されると引き続き所属する。ポーランド共産党にもヨシフ・スターリンの大粛清の嵐が吹き荒れたが、ビェルトは粛清を免れ、1942年のポーランド労働者党の創立に参加する。\nその後ソビエト連邦によりポーランドが「解放」されるとビェルトは人民評議会議長に就任し、ポーランド労働者党は社会党を併合しポーランド統一労働者党となる。ビェルトは初代書記長に就任し、「小スターリン」としてスターリン主義的な恐怖政治をポーランドに敷いた。"
  
 #SER
  POLITICS_PETER_II_OF_SERBIA_DESC:0 "ペータル2世・カラジョルジェヴィッチは、セルビア南スラブ王国の第2代国王である。"
