--- a/localisation/replace/modifiers_l_english.yml
+++ b/localisation/replace/modifiers_l_english.yml
@@ -7,3 +7,5 @@
  Konoe_cabinet_makes_concessions:0 "近衛内閣が譲歩"
  Social_Imperialism:0 "社会帝国主義"
  Anti-Japanese_Imperialism:0 "反日本帝国主義"
+ American_Empire:0 "米帝"
+ Yellow_Monkey:0 "黄色いサル"
