政党名整理

--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -1,127 +1,190 @@
 ﻿l_english:
-#大東亜共栄圏
- JAP_total_socialism_party:0 "日本共産党"
- JAP_radical_socialism_party:0 "日本無産党"
- JAP_social_democracy_party:0 "社会大衆党"
- JAP_social_liberalism_party:0 "自由党"
- JAP_classical_liberalism_party:0 "日本進歩党"
- JAP_liberal_conservatism_party:0 "立憲民政党"
- JAP_social_conservatism_party:0 "立憲政友会"
- JAP_authoritative_democracy_party:0 "協同党"
- JAP_reactionary_authoritarianism_party:0 "立憲帝政党"
- JAP_national_populism_party:0 "国民同盟"
- JAP_national_populism_party_Greater_Japan_Party:0 "大日本党"
+#汎用
+ PARTY_illegal_party:0 "§R非合法政党§!"
+ PARTY_illegal_party_long:0 "§R非合法政党§!"
  
- KOR_total_socialism_party:0 "朝鮮共産党"
- KOR_radical_socialism_party:0 "勤労人民党"
- KOR_social_democracy_party:0 "朝鮮社会民主党"
- KOR_social_liberalism_party:0 "社会主義労働者党"
- KOR_classical_liberalism_party:0 "大韓独立促成国民会"
- KOR_liberal_conservatism_party:0 "朝鮮民主党"
- KOR_social_conservatism_party:0 "韓国独立党"
- KOR_authoritative_democracy_party:0 "朝鮮総督府"#開化派
- KOR_reactionary_authoritarianism_party:0 "朝鮮総督府"#事大党
- KOR_national_populism_party:0 "朝鮮総督府"#国民総力朝鮮連盟
+ PARTY_centre_party:0 "中央党"
+ PARTY_centre_party_long:0 "中央党"
+ PARTY_communist_party:0 "共産党"
+ PARTY_communist_party_long:0 "共産党"
+ PARTY_conservative_party:0 "保守党"
+ PARTY_conservative_party_long:0 "保守党"
+ PARTY_democratic_party:0 "民主党"
+ PARTY_democratic_party_long:0 "民主党"
+ PARTY_high_commissioner_office:0 "高等弁務官事務所"
+ PARTY_high_commissioner_office_long:0 "高等弁務官事務所"
+ PARTY_independent_labour_party:0 "独立労働党"
+ PARTY_independent_labour_party_long:0 "独立労働党"
+ PARTY_labour_party:0 "労働党"
+ PARTY_labour_party_long:0 "労働党"
+ PARTY_liberal_party:0 "自由党"
+ PARTY_liberal_party_long:0 "自由党"
+ PARTY_military_dictatorship:0 "軍事政権"
+ PARTY_military_dictatorship_long:0 "軍事政権"
+ PARTY_national_alliance:0 "国民同盟"
+ PARTY_national_alliance_long:0 "国民同盟"
+ PARTY_national_liberal_party:0 "国民自由党"
+ PARTY_national_liberal_party_long:0 "国民自由党"
+ PARTY_people's_party:0 "人民党"
+ PARTY_people's_party_long:0 "人民党"
+ PARTY_radical_party:0 "急進党"
+ PARTY_radical_party_long:0 "急進党"
+ PARTY_socialist_workers_party:0 "社会主義労働者党"
+ PARTY_socialist_workers_party_long:0 "社会主義労働者党"
  
- DLI_total_socialism_party:0 "日本共産党関東支部"
- DLI_radical_socialism_party:0 "日本無産党関東支部"
- DLI_social_democracy_party:0 "社会大衆党関東支部"
- DLI_social_liberalism_party:0 "自由党関東支部"
- DLI_classical_liberalism_party:0 "進歩党関東支部"
- DLI_liberal_conservatism_party:0 "立憲民政党関東支部"
- DLI_social_conservatism_party:0 "立憲政友会関東支部"
- DLI_authoritative_democracy_party:0 "協同党関東支部"
- DLI_reactionary_authoritarianism_party:0 "立憲帝政党関東支部"
- DLI_national_populism_party:0 "関東庁"#関東州興亜奉公連盟
+##アジア
+#CHI-中国
+ PARTY_central_china_political_council:0 "華中政務委員会"
+ PARTY_central_china_political_council_long:0 "華中政務委員会"
+ PARTY_north_china_political_council:0 "華北政務委員会"
+ PARTY_north_china_political_council_long:0 "華北政務委員会"
+ PARTY_provisional_government_administrative_commission:0 "行政委員会"
+ PARTY_provisional_government_administrative_commission_long:0 "臨時政府行政委員会"
+ PARTY_reformed_government_executive_court:0 "行政院"
+ PARTY_reformed_government_executive_court_long:0 "維新政府行政院"
  
- TWN_total_socialism_party:0 "日本共産党台湾支部"
- TWN_radical_socialism_party:0 "日本無産党台湾支部"
- TWN_social_democracy_party:0 "社会大衆党台湾支部"
- TWN_social_liberalism_party:0 "自由党台湾支部"
- TWN_classical_liberalism_party:0 "進歩党台湾支部"
- TWN_liberal_conservatism_party:0 "立憲民政党台湾支部"
- TWN_social_conservatism_party:0 "立憲政友会台湾支部"
- TWN_authoritative_democracy_party:0 "協同党台湾支部"
- TWN_reactionary_authoritarianism_party:0 "立憲帝政党台湾支部"
- TWN_national_populism_party:0 "台湾総督府"#皇民奉公会
+#DLI-大連
+ PARTY_kwantung_agency:0 "関東州庁"
+ PARTY_kwantung_agency_long:0 "関東州庁"
+ PARTY_kwantung_asian_development_service_league:0 "興亜奉公連盟"
+ PARTY_kwantung_asian_development_service_league_long:0 "関東州興亜奉公連盟"
  
- MAN_total_socialism_party:0 "日本共産党満州支部"
- MAN_radical_socialism_party:0 "日本無産党満州支部"
- MAN_social_democracy_party:0 "社会大衆党満州支部"
- MAN_social_liberalism_party:0 "自由党満州支部"
- MAN_classical_liberalism_party:0 "進歩党満州支部"
- MAN_liberal_conservatism_party:0 "立憲民政党満州支部"
- MAN_social_conservatism_party:0 "立憲政友会満州支部"
- MAN_authoritative_democracy_party:0 "協同党満州支部"
- MAN_reactionary_authoritarianism_party:0 "愛新覚羅氏"
- MAN_national_populism_party:0 "満州国協和会"
+#INS-インドネシア
+ PARTY_java_service_association:0 "奉公会"
+ PARTY_java_service_association_long:0 "ジャワ奉公会"
  
- MEN_total_socialism_party:0 "内モンゴル人民革命党"
- MEN_radical_socialism_party:0 "内モンゴル人民革命党親共産党派"
- MEN_social_democracy_party:0 "社会大衆党蒙古支部"
- MEN_social_liberalism_party:0 "自由党蒙古支部"
- MEN_classical_liberalism_party:0 "進歩党蒙古支部"
- MEN_liberal_conservatism_party:0 "内モンゴル人民革命党親国民党派"
- MEN_social_conservatism_party:0 "立憲政友会蒙古支部"
- MEN_authoritative_democracy_party:0 "協同党蒙古支部"
- MEN_reactionary_authoritarianism_party:0 "ボルジギン氏"
- MEN_national_populism_party:0 "蒙古地方自治政務委員会"
+#JAP-日本
+ PARTY_constitutional_government_friends_association:0 "政友会"
+ PARTY_constitutional_government_friends_association_long:0 "立憲政友会"
+ PARTY_constitutional_democratic_party:0 "民政党"
+ PARTY_constitutional_democratic_party_long:0 "立憲民政党"
+ PARTY_constitutional_imperial_rule_party:0 "帝政党"
+ PARTY_constitutional_imperial_rule_party_long:0 "立憲帝政党"
+ PARTY_great_japan_party:0 "大日本党"
+ PARTY_great_japan_party_long:0 "大日本党"
+ PARTY_imperial_rule_assistance_association:0 "大政翼賛会"
+ PARTY_imperial_rule_assistance_association_long:0 "大政翼賛会"
+ PARTY_japan_cooperative_party:0 "協同党"
+ PARTY_japan_cooperative_party_long:0 "日本協同党"
+ PARTY_japan_progressive_party:0 "進歩党"
+ PARTY_japan_progressive_party_long:0 "日本進歩党"
+ PARTY_japan_proletarian_party:0 "無産党"
+ PARTY_japan_proletarian_party_long:0 "日本無産党"
+ PARTY_japanese_communist_party:0 "共産党"
+ PARTY_japanese_communist_party_long:0 "日本共産党"
+ PARTY_socialist_masses_party:0 "社会大衆党"
+ PARTY_socialist_masses_party_long:0 "社会大衆党"
  
- CHI_republic_provisional_government_national_populism_party:0 "華北政務委員会"
+#KOR-朝鮮
+ PARTY_choson_communist_party:0 "朝鮮共産党"
+ PARTY_choson_communist_party_long:0 "朝鮮共産党"
+ PARTY_choson_democratic_party:0 "朝鮮民主党"
+ PARTY_choson_democratic_party_long:0 "朝鮮民主党"
+ PARTY_choson_government-general:0 "朝鮮総督府"
+ PARTY_choson_government-general_long:0 "朝鮮総督府"
+ PARTY_choson_social_democratic_party:0 "朝鮮社会民主党"
+ PARTY_choson_social_democratic_party_long:0 "朝鮮社会民主党"
+ PARTY_korea_independent_party:0 "独立党"
+ PARTY_korea_independent_party_long:0 "韓国独立党"
+ PARTY_korean_independence_rapid_realisation_national_association:0 "国民会"
+ PARTY_korean_independence_rapid_realisation_national_association_long:0 "大韓独立促成国民会"
+ PARTY_laboring_people's_party:0 "勤労人民党"
+ PARTY_laboring_people's_party_long:0 "勤労人民党"
+ PARTY_national_mobilization_choson_league:0 "国民総力朝鮮連盟"
+ PARTY_national_mobilization_choson_league_long:0 "国民総力朝鮮連盟"
  
- CHI_republic_reformed_government_national_populism_party:0 "華中政務委員会"
+#MAN-満州
+ PARTY_manchukuo_concordia_association:0 "協和会"
+ PARTY_manchukuo_concordia_association_long:0 "満州国協和会"
  
- SIA_total_socialism_party:0 "タイ国共産党"
- SIA_radical_socialism_party:0 "タイ国人民解放軍"
- SIA_social_democracy_party:0 "国民社会民主党"
- SIA_social_liberalism_party:0 "自由タイ運動"
- SIA_classical_liberalism_party:0 "民主党"
- SIA_liberal_conservatism_party:0 "自由党"
- SIA_social_conservatism_party:0 "憲法戦線党"
- SIA_authoritative_democracy_party:0 "人民党"
- SIA_reactionary_authoritarianism_party:0 "人民党"
- SIA_national_populism_party:0 "仏法主義党"
+#MON-モンゴル
+ PARTY_borjigin:0 "ボルジギン氏"
+ PARTY_borjigin_long:0 "ボルジギン氏"
+ PARTY_inner_mongolian_people's_revolutionary_party:0 "人民革命党"
+ PARTY_inner_mongolian_people's_revolutionary_party_long:0 "内モンゴル人民革命党"
+ PARTY_menggu_political_council:0 "蒙古政務委員会"
+ PARTY_menggu_political_council_long:0 "蒙古政務委員会"
  
- INS_authoritative_democracy_party:0 "軍事政権"
- INS_reactionary_authoritarianism_party:0 "軍事政権"
- INS_national_populism_party:0 "ジャワ奉公会"
+#SIA-シャム, タイ
+ PARTY_free_thai_movement:0 "自由タイ運動"
+ PARTY_free_thai_movement_long:0 "自由タイ運動"
+ PARTY_thailand_communist_party:0 "共産党"
+ PARTY_thailand_communist_party_long:0 "タイ共産党"
  
-#ウェストミンスター憲章機構
- ENG_total_socialism_party:0 "グレートブリテン共産党"
- ENG_radical_socialism_party:0 "グレートブリテン社会党"
- ENG_social_democracy_party:0 "労働党"
- ENG_social_liberalism_party:0 "自由党"
- ENG_classical_liberalism_party:0 "保守党"
- ENG_liberal_conservatism_party:0 "国民自由党"
- ENG_social_conservatism_party:0 "独立労働党"
- ENG_authoritative_democracy_party:0 "連合帝国党"
- ENG_reactionary_authoritarianism_party:0 "ウィンザー朝"
- ENG_national_populism_party:0 "帝国ファシスト連盟"
+#TWN-台湾
+ PARTY_imperial_service_association:0 "皇民奉公会"
+ PARTY_imperial_service_association_long:0 "皇民奉公会"
+ PARTY_taiwan_government-general:0 "台湾総督府"
+ PARTY_taiwan_government-general_long:0 "台湾総督府"
  
- ENG_GBR_total_socialism_party:0 "グレートブリテン共産党"
- ENG_GBR_radical_socialism_party:0 "グレートブリテン社会党"
- ENG_GBR_social_democracy_party:0 "労働党"
- ENG_GBR_social_liberalism_party:0 "自由党"
- ENG_GBR_classical_liberalism_party:0 "保守党"
- ENG_GBR_liberal_conservatism_party:0 "国民自由党"
- ENG_GBR_social_conservatism_party:0 "独立労働党"
- ENG_GBR_authoritative_democracy_party:0 "連合帝国党"
- ENG_GBR_reactionary_authoritarianism_party:0 "ウィンザー朝"
- ENG_GBR_national_populism_party:0 "帝国ファシスト連盟"
+##ヨーロッパ
+#ENG-イングランド
+ PARTY_england_communist_party:0 "イングランド共産党"
+ PARTY_england_communist_party_long:0 "イングランド共産党"
+ PARTY_england_socialist_party:0 "イングランド社会党"
+ PARTY_england_socialist_party_long:0 "イングランド社会党"
+ PARTY_great_britain_communist_party:0 "グレートブリテン共産党"
+ PARTY_great_britain_communist_party_long:0 "グレートブリテン共産党"
+ PARTY_great_britain_socialist_party:0 "グレートブリテン社会党"
+ PARTY_great_britain_socialist_party_long:0 "グレートブリテン社会党"
+ PARTY_imperial_fascist_league:0 "帝国ファシスト連盟"
+ PARTY_imperial_fascist_league_long:0 "帝国ファシスト連盟"
+ PARTY_windsor_house:0 "ウィンザー家"
+ PARTY_windsor_house_long:0 "ウィンザー家"
  
- AST_total_socialism_party:0 "オーストラリア共産党"
- AST_social_democracy_party:0 "オーストラリア労働党"
- AST_authoritative_democracy_party:0 "中央党"
- AST_national_populism_party:0 "中央党右派"
+#FRA-フランス
+ PARTY_french_communist_party:0 "共産党"
+ PARTY_french_communist_party_long:0 "フランス共産党"
+ PARTY_radical-socialist_and_radical_republican_party:0 "急進党"
+ PARTY_radical-socialist_and_radical_republican_party_long:0 "急進社会主義及び急進共和主義党"
  
- NZL_total_socialism_party:0 "ニュージーランド共産党"
- NZL_liberal_conservatism_party:0 "ニュージーランド労働党"
- NZL_national_populism_party:0 "ニュージーランド軍団"
- NZL_authoritative_democracy_party:0 "ニュージーランド国民党"
+#RHI-ラインラント
+ PARTY_rheinland_christian_people's_party:0 "キリスト教人民党"
+ PARTY_rheinland_christian_people's_party_long:0 "ラインラント・キリスト教人民党"
+ PARTY_rheinland_communist_party:0 "共産党"
+ PARTY_rheinland_communist_party_long:0 "ラインラント共産党"
+ PARTY_rheinland_democratic_party:0 "民主党"
+ PARTY_rheinland_democratic_party_long:0 "ラインラント民主党"
+ PARTY_rheinland_social_democratic_party:0 "社会民主党"
+ PARTY_rheinland_social_democratic_party_long:0 "ラインラント社会民主党"
+ 
+#SAR-ザール
+ PARTY_saarland_christian_people's_party:0 "キリスト教人民党"
+ PARTY_saarland_christian_people's_party_long:0 "ザールラント・キリスト教人民党"
+ PARTY_saarland_communist_party:0 "共産党"
+ PARTY_saarland_communist_party_long:0 "ザールラント共産党"
+ PARTY_saarland_democratic_party:0 "民主党"
+ PARTY_saarland_democratic_party_long:0 "ザールラント民主党"
+ PARTY_saarland_social_democratic_party:0 "社会民主党"
+ PARTY_saarland_social_democratic_party_long:0 "ザールラント社会民主党"
+ 
+##大洋州
+#AST-オーストラリア
+ PARTY_australia_communist_party:0 "共産党"
+ PARTY_australia_communist_party_long:0 "オーストラリア共産党"
+ PARTY_australia_labour_party:0 "労働党"
+ PARTY_australia_labour_party_long:0 "オーストラリア労働党"
+ PARTY_australia_liberal_party:0 "自由党"
+ PARTY_australia_liberal_party_long:0 "オーストラリア自由党"
+ PARTY_australia_national_party:0 "国民党"
+ PARTY_australia_national_party_long:0 "オーストラリア国民党"
+ 
+#FSM-ミクロネシア
+ PARTY_south_seas_agency:0 "南洋庁"
+ PARTY_south_seas_agency_long:0 "南洋庁"
+ 
+#NZL-ニュージーランド
+ PARTY_new_zealand_communist_party:0 "共産党"
+ PARTY_new_zealand_communist_party_long:0 "ニュージーランド共産党"
+ PARTY_new_zealand_labour_party:0 "労働党"
+ PARTY_new_zealand_labour_party_long:0 "ニュージーランド労働党"
+ PARTY_new_zealand_legion:0 "ニュージーランド軍団"
+ PARTY_new_zealand_legion_long:0 "ニュージーランド軍団"
+ PARTY_new_zealand_national_party:0 "国民党"
+ PARTY_new_zealand_national_party_long:0 "ニュージーランド国民党"
+ 
  
 #西欧同盟
- FRA_total_socialism_party:0 "フランス共産党"
- FRA_radical_socialism_party:0 "急進党"
  FRA_social_democracy_party:0 "民主社会主義抗戦同盟"
  FRA_social_liberalism_party:0 "民主社会主義抗戦同盟"
  FRA_classical_liberalism_party:0 "社会民主共和党同盟"
@@ -130,28 +193,6 @@
  FRA_authoritative_democracy_party:0 "人民共和派運動"
  FRA_reactionary_authoritarianism_party:0 "アクション・フランセーズ"
  FRA_national_populism_party:0 "フランス人民連合"
- 
- SAR_total_socialism_party:0 "ドイツ共産党"
- SAR_radical_socialism_party:0 "ドイツ共産党"
- SAR_social_democracy_party:0 "ザールラント社会民主党"
- SAR_social_liberalism_party:0 "民主社会主義抗戦同盟"
- SAR_classical_liberalism_party:0 "ザール民主党"
- SAR_liberal_conservatism_party:0 "ザールラントキリスト教民主同盟"
- SAR_social_conservatism_party:0 "民主社会主義抗戦同盟"
- SAR_authoritative_democracy_party:0 "人民共和派運動"
- SAR_reactionary_authoritarianism_party:0 "中央党"
- SAR_national_populism_party:0 "高等弁務官事務所"
- 
- RHI_total_socialism_party:0 "ドイツ共産党"
- RHI_radical_socialism_party:0 "ドイツ共産党"
- RHI_social_democracy_party:0 "ラインラント社会民主党"
- RHI_social_liberalism_party:0 "民主社会主義抗戦同盟"
- RHI_classical_liberalism_party:0 "社会民主共和党同盟"
- RHI_liberal_conservatism_party:0 "ラインラントキリスト教民主同盟"
- RHI_social_conservatism_party:0 "民主社会主義抗戦同盟"
- RHI_authoritative_democracy_party:0 "人民共和派運動"
- RHI_reactionary_authoritarianism_party:0 "中央党"
- RHI_national_populism_party:0 "高等弁務官事務所"
  
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
@@ -468,11 +509,11 @@
  MEX_reactionary_authoritarianism_party:0 "軍事政権"
  MEX_national_populism_party:0 "国家シナキズム連合"
  
-#######
-#アジア
  
-#ヨーロッパ
+#保留
+ SIA_social_democracy_party:0 "国民社会民主党"
+ SIA_social_conservatism_party:0 "憲法戦線党"
+ SIA_national_populism_party:0 "仏法主義党"
  
-#新大陸
+ ENG_authoritative_democracy_party:0 "連合帝国党"
  
-#太平洋
