--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -13,17 +13,17 @@
  GREENRUSSIA_empire_DEF:0 "緑ロシア帝国"
  GREENRUSSIA_empire_ADJ:0 "緑ロシア"
  
- JOSEON_kingdom:0 "朝鮮王国"
- JOSEON_kingdom_DEF:0 "朝鮮王国"
- JOSEON_kingdom_ADJ:0 "朝鮮"
+ CHOSON_kingdom:0 "朝鮮王国"
+ CHOSON_kingdom_DEF:0 "朝鮮王国"
+ CHOSON_kingdom_ADJ:0 "朝鮮"
  
- JOSEON_republic:0 "朝鮮共和国"
- JOSEON_republic_DEF:0 "朝鮮共和国"
- JOSEON_republic_progressive_communism:0 "朝鮮民主主義人民共和国"
- JOSEON_republic_progressive_communism_DEF:0 "朝鮮民主主義人民共和国"
- JOSEON_republic_classical_communism:0 "朝鮮民主主義人民共和国"
- JOSEON_republic_classical_communism_DEF:0 "朝鮮民主主義人民共和国"
- JOSEON_republic_DEF:0 "朝鮮"
+ CHOSON_republic:0 "朝鮮共和国"
+ CHOSON_republic_DEF:0 "朝鮮共和国"
+ CHOSON_republic_progressive_communism:0 "朝鮮民主主義人民共和国"
+ CHOSON_republic_progressive_communism_DEF:0 "朝鮮民主主義人民共和国"
+ CHOSON_republic_classical_communism:0 "朝鮮民主主義人民共和国"
+ CHOSON_republic_classical_communism_DEF:0 "朝鮮民主主義人民共和国"
+ CHOSON_republic_DEF:0 "朝鮮"
  
  GEORGIA:0 "ジョージア"
  GEORGIA_DEF:0 "ジョージア"
