--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -64,3 +64,6 @@
  debug_special_event_WGR_unification:0 "ホーエンツォレルン家によるドイツ再統一SE"
  debug_special_event_add:0 "SE変数の増加"
  debug_special_event_add:0 "SE変数の減少"
+ 
+#他
+ POLITICS_LEADER:0 ""
