--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -733,6 +733,9 @@
  CMR_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  CMR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  CMR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ CMR_ENG-GBR_mandate:0 "$OVERLORDADJ$委任統治領カメルーン地域"
+ CMR_ENG-GBR_mandate_DEF:0 "$OVERLORDADJ$委任統治領カメルーン地域"
+ CMR_ENG-GBR_mandate_ADJ:0 "$OVERLORDADJ$領カメルーン"
  
  COG_dominion:0 "$NONIDEOLOGY$自治領"
  COG_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -898,8 +901,8 @@
  
  MAD_dominion:0 "$NONIDEOLOGY$自治領"
  MAD_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- MAD_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属島植民地"
- MAD_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属島植民地"
+ MAD_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属領植民地"
+ MAD_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属領植民地"
  MAD_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  MAD_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  MAD_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
@@ -1238,8 +1241,8 @@
  
  CRC_dominion:0 "$NONIDEOLOGY$自治領"
  CRC_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- CRC_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属島植民地"
- CRC_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属島植民地""
+ CRC_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属領植民地"
+ CRC_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属領植民地""
  CRC_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  CRC_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  CRC_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
@@ -2158,8 +2161,8 @@
  
  SHN_dominion:0 "$NONIDEOLOGY$自治領"
  SHN_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- SHN_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属島植民地"
- SHN_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属島植民地"
+ SHN_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属領植民地"
+ SHN_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$及び属領植民地"
  SHN_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  SHN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SHN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
@@ -2675,14 +2678,14 @@
  NMR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  NMR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
- PCN_dominion:0 "$NONIDEOLOGY$自治領"
- PCN_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- PCN_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- PCN_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- PCN_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- PCN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- PCN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- PCN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ PCN_dominion:0 "ピトケアン、ヘンダーソン、デュシー及びオエノ諸島自治領"
+ PCN_dominion_DEF:0 "ピトケアン、ヘンダーソン、デュシー及びオエノ諸島自治領"
+ PCN_colony:0 "$OVERLORDADJ$領ピトケアン、ヘンダーソン、デュシー及びオエノ諸島植民地"
+ PCN_colony_DEF:0 "$OVERLORDADJ$領ピトケアン、ヘンダーソン、デュシー及びオエノ諸島植民地"
+ PCN_colony_ADJ:0 "$OVERLORDADJ$領ピトケアン諸島"
+ PCN_overseas_territory:0 "$OVERLORDADJ$領ピトケアン、ヘンダーソン、デュシー及びオエノ諸島"
+ PCN_overseas_territory_DEF:0 "$OVERLORDADJ$領ピトケアン、ヘンダーソン、デュシー及びオエノ諸島"
+ PCN_overseas_territory_ADJ:0 "$OVERLORDADJ$領ピトケアン諸島"
  
  PLW_dominion:0 "$NONIDEOLOGY$自治領"
  PLW_dominion_DEF:0 "$NONIDEOLOGY$自治領"
