--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -271,11 +271,12 @@
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
  national_policy_research_outline_desc:0 "国策研究大綱"
  
- JAP_military_clique:0 "軍閥"
- JAP_military_clique_desc:0 "軍閥"
+ JAP_gunbatsu:0 "軍閥"
+ JAP_gunbatsu_desc:0 "我が国の軍部は複数の派閥に分かれており、彼らは政府の支持を勝ち取るか、政府に反対する大衆をかき立てるかのどちらかを目指して奮闘している。日本政府は国家のために、これらのうちどの派閥が政府の利益になるか、またどの派閥が根絶しなければならない脅威をもたらすかを判断しなければならない。"
  JAP_ui_faction_header:0 "派閥"
  JAP_ui_loyalty_header:0 "忠誠"
  JAP_ui_popularity_header:0 "支持率"
+ JAP_a_royal_visit:0 "天皇の行幸"
  JAP_zveno_loyalty_status:0 "[GetZvenoLoyaltyStatus]"
  JAP_zveno_loyalty_status_amount:0 "[?JAP.JAP_zveno_loyalty|0]"
  JAP_bs_loyalty_status:0 "[GetBsLoyaltyStatus]"
@@ -306,3 +307,156 @@
  JAP_NSM_TOOLTIP:0 "£faction_JAP_nsm §Y国家社会主義運動§!は元ズヴェノのアレクサンダル・ツァンコフ率いる極右組織である。\n£faction_JAP_nsm §Y国家社会主義運動§!は全国各地でデモや抗議活動を行うことで、大衆の人気を得ようとしている。"
  JAP_LOYALTY_TOOLTIP:0 "§Y忠誠心§!は派閥が政府に協力する意向を表している。\n§Y忠誠心§!が高いほど、派閥が政府に立ち向かう可能性は低くなる。\n派閥を政府に統合するには、特定のディシジョンを完了することで、その構成員を政府と連携させ、§Y忠誠心§!を100まで上昇させる必要がある。"
  JAP_POPULARITY_TOOLTIP:0 "§Y支持率§!は派閥が特定の人口層（軍、労働者、農民、急進右翼）から受ける支持を表している。\n§Y支持率§!が高いほど、派閥が政府に立ち向かう可能性は高くなる。\n派閥を撲滅するためには、特定のディシジョンを完了することで、派閥を弱体化させて§Y支持率§!を0まで減らす必要がある。"
+ JAP_cooperation_zveno_speech:0 "[GetZvenoName]の演説を許可"
+ JAP_cooperation_zveno_speech_desc:0 "[GetZvenoName]が経済及び社会政策、産業計画、農業改革に関する提案について演説することを許可する。"
+ JAP_cooperation_bs_speech:0 "[GetBsName]の演説を許可"
+ JAP_cooperation_bs_speech_desc:0 "[GetBsName]が経済及び社会政策、産業計画、農業改革に関する提案について演説することを許可する。"
+ JAP_cooperation_bzns_speech:0 "[GetBznsName]の演説を許可"
+ JAP_cooperation_bzns_speech_desc:0 "[GetBznsName]が経済及び社会政策、産業計画、農業改革に関する提案について演説することを許可する。"
+ JAP_cooperation_nsm_speech:0 "[GetNsmName]の演説を許可"
+ JAP_cooperation_nsm_speech_desc:0 "[GetNsmName]が経済及び社会政策、産業計画、農業改革に関する提案について演説することを許可する。"
+ JAP_cooperation_zveno_joint_act:0 "[GetZvenoName]との共同活動"
+ JAP_cooperation_zveno_joint_act_desc:0 "[GetZvenoName]との共同集会を開催し、この派閥への支持と協力の意思を公にする。"
+ JAP_cooperation_bs_joint_act:0 "[GetBsName]との共同活動"
+ JAP_cooperation_bs_joint_act_desc:0 "[GetBsName]との共同集会を開催し、この派閥への支持と協力の意思を公にする。"
+ JAP_cooperation_bzns_joint_act:0 "[GetBznsName]との共同活動"
+ JAP_cooperation_bzns_joint_act_desc:0 "[GetBznsName]との共同集会を開催し、この派閥への支持と協力の意思を公にする。"
+ JAP_cooperation_nsm_joint_act:0 "[GetNsmName]との共同活動"
+ JAP_cooperation_nsm_joint_act_desc:0 "[GetNsmName]との共同集会を開催し、この派閥への支持と協力の意思を公にする。"
+ JAP_cooperation_bolster_zveno:0 "[GetZvenoName]の強化"
+ JAP_cooperation_bolster_zveno_desc:0 "協力が成功した後、[GetZvenoName]に一定の特権を与えて、追放された構成員の組織への再加入を許可する。"
+ JAP_cooperation_zveno_social_renovation_directory:0 "[GetZvenoName]の社会復興局の設立"
+ JAP_cooperation_zveno_social_renovation_directory_desc:1 "[GetZvenoName]の提案を受け入れ、国家再建を目的とする宣伝省たる社会復興局を設立すべきだ。"
+ JAP_cooperation_bs_legalize_faction:0 "[GetBsName]組織の合法化"
+ JAP_cooperation_bs_legalize_faction_desc:0 "[GetBsName]が法的枠組みの中での政治及び社会活動を行うことを公認する。"
+ JAP_cooperation_bzns_legalize_faction:0 "[GetBznsName]組織の合法化"
+ JAP_cooperation_bzns_legalize_faction_desc:0 "[GetBznsName]が法的枠組みの中での政治及び社会活動を行うことを公認する。"
+ JAP_cooperation_nsm_legalize_faction:0 "[GetNsmName]組織の合法化"
+ JAP_cooperation_nsm_legalize_faction_desc:0 "[GetNsmName]が法的枠組みの中での政治及び社会活動を行うことを公認する。"
+ JAP_cooperation_fund_zveno:0 "[GetZvenoName]への資金提供"
+ JAP_cooperation_fund_zveno_desc:0 "我々の政治的盟友の支援を目的に、支持率向上のための宣伝活動の実行資金を[GetZvenoName]に提供する。"
+ JAP_cooperation_fund_bs:0 "[GetBsName]への資金提供"
+ JAP_cooperation_fund_bs_desc:0 "我々の政治的盟友の支援を目的に、支持率向上のための宣伝活動の実行資金を[GetBsName]に提供する。"
+ JAP_cooperation_fund_bzns:0 "[GetBznsName]への資金提供"
+ JAP_cooperation_fund_bzns_desc:0 "我々の政治的盟友の支援を目的に、支持率向上のための宣伝活動の実行資金を[GetBznsName]に提供する。"
+ JAP_cooperation_fund_nsm:0 "[GetNsmName]への資金提供"
+ JAP_cooperation_fund_nsm_desc:0 "我々の政治的盟友の支援を目的に、支持率向上のための宣伝活動の実行資金を[GetNsmName]に提供する。"
+ JAP_cooperation_appoint_zveno_members:0 "[GetZvenoName]構成員への指名"
+ JAP_cooperation_appoint_zveno_members_desc:0 "[GetZvenoName]が、興味を引く考えや提案を多く有する有能な構成員から成っていることは明らかである。閣内で最も能力を要する指導者への関連ポストを用意しよう。"
+ JAP_cooperation_appoint_bs_members:0 "[GetBsName]構成員への指名"
+ JAP_cooperation_appoint_bs_members_desc:0 "[GetBsName]が、興味を引く考えや提案を多く有する有能な構成員から成っていることは明らかである。閣内で最も能力を要する指導者への関連ポストを用意しよう。"
+ JAP_cooperation_appoint_bzns_members:0 "[GetBznsName]構成員への指名"
+ JAP_cooperation_appoint_bzns_members_desc:0 "[GetBznsName]が、興味を引く考えや提案を多く有する有能な構成員から成っていることは明らかである。閣内で最も能力を要する指導者への関連ポストを用意しよう。"
+ JAP_cooperation_appoint_nsm_members:0 "[GetNsmName]構成員への指名"
+ JAP_cooperation_appoint_nsm_members_desc:0 "[GetNsmName]が、興味を引く考えや提案を多く有する有能な構成員から成っていることは明らかである。閣内で最も能力を要する指導者への関連ポストを用意しよう。"
+ JAP_cooperation_integrate_zveno:0 "[GetZvenoName]を統合"
+ JAP_cooperation_integrate_zveno_desc:0 "これまで[GetZvenoName]とは緊密とはいえ異なる組織として協力してきた。だが、それを我が政権に迎え入れる時が来たのだ。"
+ JAP_cooperation_integrate_bs:0 "[GetBsName]を統合"
+ JAP_cooperation_integrate_bs_desc:0 "これまで[GetBsName]とは緊密とはいえ異なる組織として協力してきた。だが、それを我が政権に迎え入れる時が来たのだ。"
+ JAP_cooperation_integrate_bzns:0 "[GetBznsName]を統合"
+ JAP_cooperation_integrate_bzns_desc:0 "これまで[GetBznsName]とは緊密とはいえ異なる組織として協力してきた。だが、それを我が政権に迎え入れる時が来たのだ。"
+ JAP_cooperation_integrate_nsm:0 "[GetNsmName]を統合"
+ JAP_cooperation_integrate_nsm_desc:0 "これまで[GetNsmName]とは緊密とはいえ異なる組織として協力してきた。だが、それを我が政権に迎え入れる時が来たのだ。"
+ JAP_opression_discredit_zveno_leaders:0 "[GetZvenoName]の指導者を中傷"
+ JAP_opression_discredit_zveno_leaders_desc:0 "[GetZvenoName]派は、おおよそ我々が受け入れられない危険思想及び政府に対する激しい非難を国民に広げている。社会的なイメージと支持率にダメージを与えるためにも、奴らの指導者の信頼を公的に失墜させなければならないのだ。"
+ JAP_opression_discredit_bs_leaders:0 "[GetBsName]の指導者を中傷"
+ JAP_opression_discredit_bs_leaders_desc:0 "[GetBsName]派は、おおよそ我々が受け入れられない危険思想及び政府に対する激しい非難を国民に広げている。社会的なイメージと支持率にダメージを与えるためにも、奴らの指導者の信頼を公的に失墜させなければならないのだ。"
+ JAP_opression_discredit_bzns_leaders:0 "[GetBznsName]の指導者を中傷"
+ JAP_opression_discredit_bzns_leaders_desc:0 "[GetBznsName]派は、おおよそ我々が受け入れられない危険思想及び政府に対する激しい非難を国民に広げている。社会的なイメージと支持率にダメージを与えるためにも、奴らの指導者の信頼を公的に失墜させなければならないのだ。"
+ JAP_opression_discredit_nsm_leaders:0 "[GetNsmName]の指導者を中傷"
+ JAP_opression_discredit_nsm_leaders_desc:0 "[GetNsmName]派は、おおよそ我々が受け入れられない危険思想及び政府に対する激しい非難を国民に広げている。社会的なイメージと支持率にダメージを与えるためにも、奴らの指導者の信頼を公的に失墜させなければならないのだ。"
+ JAP_opression_dispose_of_zveno_generals:0 "[GetZvenoName]の将軍を処分"
+ JAP_opression_dispose_of_zveno_generals_desc:0 "[GetZvenoName]のクーデターが現実味を帯びている。故に該当組織または前身の「軍事同盟」と親しい将軍を、速やかに予備役へ編入するか退役させ、処分しよう。"
+ JAP_opression_ban_bs_media:0 "[GetBsName]のメディアを禁止"
+ JAP_opression_ban_bs_media_desc:0 "[GetBsName]傘下又は派閥を公に支援しているメディアについては発禁処分とする。"
+ JAP_opression_ban_bzns_media:0 "[GetBznsName]のメディアを禁止"
+ JAP_opression_ban_bzns_media_desc:0 "[GetBznsName]傘下又は派閥を公に支援しているメディアについては発禁処分とする。"
+ JAP_opression_ban_nsm_media:0 "[GetNsmName]のメディアを禁止"
+ JAP_opression_ban_nsm_media_desc:0 "[GetNsmName]傘下又は派閥を公に支援しているメディアについては発禁処分とする。"
+ JAP_opression_repress_zveno:0 "[GetZvenoName]を抑圧"
+ JAP_opression_repress_zveno_desc:0 "我が国を分裂させる反体制派や扇動者を容認することはできない。[GetZvenoName]の一員が政府に対して犯した行為は深刻な結果を引き起こすだろう。"
+ JAP_opression_repress_bs:0 "[GetBsName]を抑圧"
+ JAP_opression_repress_bs_desc:0 "我が国を分裂させる反体制派や扇動者を容認することはできない。[GetBsName]の一員が政府に対して犯した行為は深刻な結果を引き起こすだろう。"
+ JAP_opression_repress_bzns:0 "[GetBznsName]を抑圧"
+ JAP_opression_repress_bzns_desc:0 "我が国を分裂させる反体制派や扇動者を容認することはできない。[GetBznsName]の一員が政府に対して犯した行為は深刻な結果を引き起こすだろう。"
+ JAP_opression_repress_nsm:0 "[GetNsmName]を抑圧"
+ JAP_opression_repress_nsm_desc:0 "我が国を分裂させる反体制派や扇動者を容認することはできない。[GetNsmName]の一員が政府に対して犯した行為は深刻な結果を引き起こすだろう。"
+ JAP_opression_anti_zveno_speech:0 "[GetZvenoName]への反対集会"
+ JAP_opression_anti_zveno_speech_desc:0 "[GetZvenoName]への反対集会を開催し、彼らの組織及び反政府態勢に対する中傷演説を行おう。"
+ JAP_opression_anti_bs_speech:0 "[GetBsName]への反対集会"
+ JAP_opression_anti_bs_speech_desc:0 "[GetBsName]への反対集会を開催し、彼らの組織及び反政府態勢に対する中傷演説を行おう。"
+ JAP_opression_anti_bzns_speech:0 "[GetBznsName]への反対集会"
+ JAP_opression_anti_bzns_speech_desc:0 "[GetBznsName]への反対集会を開催し、彼らの組織及び反政府態勢に対する中傷演説を行おう。"
+ JAP_opression_anti_nsm_speech:0 "[GetNsmName]への反対集会"
+ JAP_opression_anti_nsm_speech_desc:0 "[GetNsmName]への反対集会を開催し、彼らの組織及び反政府態勢に対する中傷演説を行おう。"
+ JAP_opression_imprison_zveno_leaders:0 "[GetZvenoName]の指導者を投獄"
+ JAP_opression_imprison_zveno_leaders_desc:0 "[GetZvenoName]の指導者を投獄し、蛇の頭を切り落として組織に決定的な一撃を与えるのだ。"
+ JAP_opression_imprison_bs_leaders:0 "[GetBsName]の指導者を投獄"
+ JAP_opression_imprison_bs_leaders_desc:1 "[GetBsName]の指導者を投獄し、蛇の頭を切り落として組織に決定的な一撃を与えるのだ。"
+ JAP_opression_imprison_bzns_leaders:0 "[GetBznsName]の指導者を投獄"
+ JAP_opression_imprison_bzns_leaders_desc:0 "[GetBznsName]の指導者を投獄し、蛇の頭を切り落として組織に決定的な一撃を与えるのだ。"
+ JAP_opression_imprison_nsm_leaders:0 "[GetNsmName]の指導者を投獄"
+ JAP_opression_imprison_nsm_leaders_desc:0 "[GetNsmName]の指導者を投獄し、蛇の頭を切り落として組織に決定的な一撃を与えるのだ。"
+ JAP_opression_raid_zveno_supporters:0 "[GetZvenoName]の支持者を奇襲"
+ JAP_opression_raid_zveno_supporters_desc:0 "[GetZvenoName]派は指導者の逮捕後ひどく弱体化している。未だ組織を存続させ、陰謀を企んでいる残存勢力を追い詰める時が来た。"
+ JAP_opression_raid_bs_supporters:0 "[GetBsName]の支持者を奇襲"
+ JAP_opression_raid_bs_supporters_desc:0 "[GetBsName]の派閥は指導者の逮捕後ひどく弱体化している。未だ組織を存続させ、陰謀を企んでいる残存勢力を追い詰める時が来た。"
+ JAP_opression_raid_bzns_supporters:0 "[GetBznsName]の支持者を奇襲"
+ JAP_opression_raid_bzns_supporters_desc:0 "[GetBznsName]の派閥は指導者の逮捕後ひどく弱体化している。未だ組織を存続させ、陰謀を企んでいる残存勢力を追い詰める時が来た。"
+ JAP_opression_raid_nsm_supporters:0 "[GetNsmName]の支持者を奇襲"
+ JAP_opression_raid_nsm_supporters_desc:0 "[GetNsmName]の派閥は指導者の逮捕後ひどく弱体化している。未だ組織を存続させ、陰謀を企んでいる残存勢力を追い詰める時が来た。"
+ JAP_opression_destroy_zveno:0 "[GetZvenoName]の撲滅"
+ JAP_opression_destroy_zveno_desc:0 "[GetZvenoName]に最後の一撃を加え、国内の脅威を完全に取り除く時が来た。"
+ JAP_opression_destroy_bs:0 "[GetBsName]の撲滅"
+ JAP_opression_destroy_bs_desc:0 "[GetBsName]に最後の一撃を加え、国内の脅威を完全に取り除く時が来た。"
+ JAP_opression_destroy_bzns:0 "[GetBznsName]の撲滅"
+ JAP_opression_destroy_bzns_desc:0 "[GetBznsName]に最後の一撃を加え、国内の脅威を完全に取り除く時が来た。"
+ JAP_opression_destroy_nsm:0 "[GetNsmName]の撲滅"
+ JAP_opression_destroy_nsm_desc:0 "[GetNsmName]に最後の一撃を加え、国内の脅威を完全に取り除く時が来た。"
+ JAP_internal_affairs_ongoing_flag:0 " 現在、派閥と交流中"
+ JAP_cooperation_faction_joint_act_tt:1 "派閥の忠誠心が§Y20§!より高い"
+ JAP_cooperation_bolster_zveno_tt:0 "派閥の忠誠心が§Y35§!より高い"
+ JAP_cooperation_legalize_faction_tt:0 "派閥の忠誠心が§Y45§!より高い"
+ JAP_cooperation_fund_faction_tt:0 "派閥の忠誠心が§Y55§!より高い"
+ JAP_cooperation_appoint_faction_members_tt:0 "派閥の忠誠心が§Y70§!より高い\n派閥の支持率が§Y55§!より高い"
+ JAP_cooperation_integrate_faction_tt:0 "派閥の忠誠心が§Y100§!より高い\n派閥の支持率が§Y70§!より高い"
+ JAP_opression_raid_faction_supporters_tt:0 "派閥の支持率が§Y30§!未満"
+ JAP_opression_destroy_faction_tt:0 "派閥の支持率が§Y0§!"
+ JAP_appointed_zveno_members_flag:0 "£faction_JAP_zveno §Yズヴェノ§!構成員を指名した"
+ JAP_appointed_bs_members_flag:0 "£faction_JAP_bs §Y社会民主労働者党広義派§!構成員を指名した"
+ JAP_appointed_bzns_members_flag:0 "£faction_JAP_bzns §Y農民同盟§!構成員を指名した"
+ JAP_appointed_nsm_members_flag:0 "£faction_JAP_nsm §Y国家社会主義運動§!構成員を指名した"
+ JAP_zveno_bolstered_flag:0 "£faction_JAP_zveno §Yズヴェノ§!が強化された"
+ JAP_zveno_destroyed_flag:0 "£faction_JAP_zveno §Yズヴェノ§!派閥が撲滅されている"
+ JAP_zveno_integrated_flag:0 "£faction_JAP_zveno §Yズヴェノ§!派閥が政府に統合されている"
+ JAP_bs_destroyed_flag:0 "£faction_JAP_bs §Y社会民主労働者党広義派§!派閥が撲滅されている"
+ JAP_bs_integrated_flag:0 "£faction_JAP_bs §Y社会民主労働者党広義派§!派閥が政府に統合されている"
+ JAP_bzns_destroyed_flag:0 "£faction_JAP_bzns §Y農民同盟§!派閥が撲滅されている"
+ JAP_bzns_integrated_flag:0 "£faction_JAP_bzns §Y農民同盟§!派閥が政府に統合されている"
+ JAP_nsm_destroyed_flag:0 "£faction_JAP_nsm §Y国家社会主義運動§!派閥が撲滅されている"
+ JAP_nsm_integrated_flag:0 "£faction_JAP_nsm §Y国家社会主義運動§!派閥が政府に統合されている"
+ JAP_zveno_legalized_flag:1 " £faction_JAP_zveno §Yズヴェノ§!派が提案した社会復興局が設立された。"
+ JAP_bs_legalized_flag:0 " £faction_JAP_bs §Y社会民主労働者党広義派§!が合法化された。"
+ JAP_bzns_legalized_flag:0 " £faction_JAP_bzns §Y農民同盟§!が合法化された。"
+ JAP_nsm_legalized_flag:0 " £faction_JAP_nsm §Y国家社会主義運動§!が合法化された。"
+ JAP_days_re_enable_tt:0 "\nこのディシジョンが再び使えるようになるまで"
+ JAP_cooperation_faction_speech_cd_tt:0 "[GetDecisionCooldownTooltip]§Y[?JAP.JAP_faction_days_reenable_low]§!日。\n"
+ JAP_cooperation_faction_joint_act_cd_tt:0 "[GetDecisionCooldownTooltip]§Y[?JAP.JAP_faction_days_reenable_medium]§!日。\n"
+ JAP_cooperation_fund_faction_cd_tt:0 "[GetDecisionCooldownTooltip]§Y[?JAP.JAP_faction_days_reenable_high]§!日。\n"
+ JAP_oppression_ban_faction_media_tt:0 "派閥の支持率が§Y55§!未満"
+ JAP_oppression_ban_faction_media_freedom_of_press_tt:0 "政府が報道の自由を認めてから§Y365§!日が経過した。"
+ JAP_has_banned_faction_media_trigger_tt:0 "過去§Y365§!日以内にいずれかの派閥メディアを禁止した"
+ JAP_has_banned_faction_media_trigger_tt_NOT:0 "不一致: 過去§Y365§!日以内にいずれかの派閥メディアを禁止した"
+ JAP_oppression_imprison_faction_leaders_tt:0 "派閥の支持率が§Y40§!未満"
+ JAP_opression_discredit_faction_leaders_cd_tt:0 "[GetDecisionCooldownTooltip]§Y[?JAP.JAP_faction_days_reenable_low]§!日。\n"
+ JAP_opression_anti_faction_speech_cd_tt:0 "[GetDecisionCooldownTooltip]§Y[?JAP.JAP_faction_days_reenable_medium]§!日。\n"
+ JAP_opression_raid_faction_supporters_cd_tt:0 "[GetDecisionCooldownTooltip]§Y[?JAP.JAP_faction_days_reenable_very_high]§!日。\n"
+ JAP_legalize_faction_prevents_oppression_tt:0 "\n§Rこのディシジョンを完了することで、国家の安寧を脅かす過激派を抑える場合を除き、今後この派閥を抑圧することができなくなる。§!"
+ JAP_ban_media_prevents_cooperation_tt:0 "\n§Rこのディシジョンを完了することで、この派閥との更なる協力関係が妨げられる。§!"
+ JAP_unlock_further_decisions_in_the_chain_tt:0 "この系統の更なるディシジョンを解禁する。"
+ JAP_repress_faction_tt:0 "近い将来、この派閥の反体制派が問題を引き起こすのを抑止する。"
+ JAP_bzns_media_banned_flag:0 "£faction_JAP_bzns §Y農民同盟§!のメディアを発禁処分にした。"
+ JAP_nsm_media_banned_flag:0 "£faction_JAP_nsm §Y国家社会主義運動§!のメディアを発禁処分にした。"
+ JAP_impending_zveno_coup:0 "[GetZvenoCoupTitle]"
+ JAP_impending_zveno_coup_desc:0 "[GetZvenoCoupDesc]"
+ JAP_impending_zveno_coup_size_tt:0 "[GetZvenoName]支持者が内戦を開始する。\nズヴェノの軍の規模はズヴェノの支持率に比例する。"
